feat(server): add a new role for multi device connectors
