# server/schemas/openapi.json
@@ -183,7 +183,8 @@
               "admin",
               "manager",
               "contributor",
-              "agent"
+              "agent",
+              "multidevice"
             ],
             "type": "string"
           }
@@ -1064,7 +1065,8 @@
           "admin",
           "manager",
           "contributor",
-          "agent"
+          "agent",
+          "multidevice"
         ]
       },
       "post": {
@@ -1651,7 +1653,8 @@
         "x-permission-roles": [
           "admin",
           "manager",
-          "contributor"
+          "contributor",
+          "multidevice"
         ]
       }
     },
@@ -1851,7 +1854,8 @@
         "x-permission-roles": [
           "admin",
           "manager",
-          "contributor"
+          "contributor",
+          "multidevice"
         ]
       }
     },
@@ -2491,7 +2495,8 @@
           "admin",
           "manager",
           "contributor",
-          "agent"
+          "agent",
+          "multidevice"
         ]
       },
       "post": {
@@ -2806,7 +2811,8 @@
           "admin",
           "manager",
           "contributor",
-          "agent"
+          "agent",
+          "multidevice"
         ]
       }
     },
